Updated sad.html with new content

--- a/sad.html
+++ b/sad.html
@@ -38,19 +38,19 @@
     const messages = [
       "It's okay to feel sad. Let it pass like a cloud.",
       "Crying is not a weakness. It's healing.",
-      "Even the rain eventually stops and gives way to the sun.",
+      "🔥 You’ve had worse. Remember that time you slapped karthikeya? Yeah, you survived.📺💀😂",
       "You're not alone, even when it feels that way.",
-      "Sadness shows you care deeply. That's a strength.",
-      "Let your tears water the seeds of healing.",
-      "This feeling won't last forever.",
-      "You're stronger than your sadness.",
+      "🏋️ Feeling heavy? That’s life adding weight plates. You’re getting strong, my dude.",
+      "Just call out to anyone u wanna rant it out...it's damnnn okayy.",
+      "Issokayy...This feeling won't last forever.",
+      "💪 You’ve survived every bad day so far — clearly you’re a pro.",
       "Your emotions are valid. Let them speak.",
       "You matter, even on the darkest days.",
-      "Give yourself grace today.",
-      "Be gentle with your heart.",
+      "📞 Call me. But u bttr bring snacks or a weird story. Bonus if it’s both. Dont mind the timeline",
+      "💗 Be kind to your heart — it's trying its best!",
       "Someone out there is rooting for you.",
-      "Take it one breath at a time.",
-      "Your story isn’t over. 🌈"
+      "🧃 You're just a juice box that got squished. Still sweet, still full of juice.🧃🥲😂",
+      "📖 Your story’s not done. And this chapter? Let’s just call it the plot twist." 
     ];
     const container = document.getElementById("chitsContainer");
     messages.forEach((msg, i) => {
