Updated sad.html with new content

--- a/lonely.html
+++ b/lonely.html
@@ -71,7 +71,7 @@
 
   <script>
     const messages = [
-      "You are never truly alone. I'm thinking of you.",
+      "You are never truly alone. We r all thinking of you.",
       "Distance can’t erase connection.",
       "Your presence is a gift, even if others don’t always show it.",
       "The world is better with you in it.",
@@ -82,7 +82,7 @@
       "You are worthy of love and connection.",
       "Loneliness is just a chapter, not the whole story.",
       "Be your own best friend today.",
-      "Someone is missing your smile right now.",
+      "Someone is missing your smile right now.So do smile idiott",
       "The night is darkest before the dawn.",
       "You are surrounded by unseen support.",
       "Let yourself be loved. Even by you."
