Updated sad.html with new content

--- a/lazy.html
+++ b/lazy.html
@@ -36,21 +36,21 @@
   <a href="index.html">← Back to Emotions</a>
   <script>
     const messages = [
-      "Rest is productive. Don’t feel guilty.",
+      "U bttr dont forget that ameerkhan's working in google 😂",
       "Everyone needs downtime. You're still amazing.",
-      "Today might be slow, but tomorrow is a new chance.",
-      "You don’t have to be busy to be valuable.",
+      "Everyone needs rest, but not all day — resting too much is not good, do some work too!",
+      "You don’t have to be busy all the time, but stop making excuses like I’ll do it tomorrow.",
       "Even machines need to recharge.",
       "You're not lazy. You're healing.",
       "Some days are for just existing.",
       "Listen to your body’s rhythm.",
       "Do one small thing. It’s enough.",
-      "Even resting is a part of growth.",
-      "Laziness isn’t a sin—burnout is real.",
+      "Being lazy is not always bad, but don’t stay in bed all morning.",
+      "Listen to your body’s rhythm — unless it’s the ‘eat snacks at 3 am’ rhythm..",
       "Doing nothing is doing something.",
       "You can reset whenever you want.",
-      "Be kind to your pace.",
-      "This pause might be exactly what you need."
+      "Be kind to your pace. Unless your pace is slow enough to qualify as a snail.",
+      "This pause might be exactly what you need. Or just a good excuse to avoid people."
     ];
     const container = document.getElementById("chitsContainer");
     messages.forEach((msg, i) => {
