Updated lazy.html with new content

--- a/lazy.html
+++ b/lazy.html
@@ -37,20 +37,20 @@
   <script>
     const messages = [
       "U bttr dont forget that ameerkhan's working in google 😂",
-      "Everyone needs downtime. You're still amazing.",
-      "Everyone needs rest, but not all day — resting too much is not good, do some work too!",
-      "You don’t have to be busy all the time, but stop making excuses like I’ll do it tomorrow.",
-      "Even machines need to recharge.",
-      "You're not lazy. You're healing.",
-      "Some days are for just existing.",
-      "Listen to your body’s rhythm.",
-      "Do one small thing. It’s enough.",
-      "Being lazy is not always bad, but don’t stay in bed all morning.",
-      "Listen to your body’s rhythm — unless it’s the ‘eat snacks at 3 am’ rhythm..",
-      "Doing nothing is doing something.",
-      "You can reset whenever you want.",
-      "Be kind to your pace. Unless your pace is slow enough to qualify as a snail.",
-      "This pause might be exactly what you need. Or just a good excuse to avoid people."
+      "Everyone needs downtime. You’re still amazing. 🌟💖",
+      "Everyone needs rest, but not all day — resting too much is not good, do some work too! 🛌⏳💪",
+      "You don’t have to be busy all the time, but stop making excuses like I’ll do it tomorrow. 🙅‍♂️⏰",
+      "Even machines need to recharge. 🔋🤖",
+      "You’re not lazy. You’re healing. 💆‍♀️✨",
+      "Some days are for just existing. 🌿😌",
+      "Listen to your body’s rhythm. 🎶🧘‍♂️",
+      "Do one small thing. It’s enough. ✔️🌱",
+      "Being lazy is not always bad, but don’t stay in bed all morning. 🛏️🌞",
+      "Listen to your body’s rhythm — unless it’s the ‘eat snacks at 3 am’ rhythm.. 🍕🌙🤫",
+      "Doing nothing is doing something. 🤷‍♀️🔄",
+      "You can reset whenever you want. 🔄✨",
+      "Be kind to your pace. Unless your pace is slow enough to qualify as a snail. 🐢🏃‍♂️.",
+      "This pause might be exactly what you need. Or just a good excuse to avoid people. 🤫⏸️😅"
     ];
     const container = document.getElementById("chitsContainer");
     messages.forEach((msg, i) => {
