--- a/sad.html
+++ b/sad.html
@@ -5,27 +5,69 @@
   <title>😢 Sad - Jar of Emotions</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #e3f2fd;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 { font-size: 2.2em; color: #2c3e50; }
-    .chits-container {
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 40px;
-    }
-    .chit {
-      width: 100px; height: 100px; background-color: #bbdefb; border-radius: 12px;
-      display: flex; align-items: center; justify-content: center; font-weight: bold;
-      font-size: 1.5em; cursor: pointer; transition: 0.3s; box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .chit:hover { background-color: #90caf9; }
-    .revealed {
-      background-color: white !important; color: #333; font-size: 1em; padding: 10px;
-      white-space: normal;
-    }
-    a { display: inline-block; margin-top: 30px; color: #1565c0; text-decoration: none; }
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #e3f2fd;
+  text-align: center;
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 2.2em;
+  color: #2c3e50;
+}
+
+.chits-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 40px;
+}
+
+.chit {
+  min-width: 100px;
+  max-width: 200px;
+  min-height: 100px;
+  background-color: #bbdefb;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1.5em;
+  cursor: pointer;
+  transition: background-color 0.3s, font-size 0.3s, padding 0.3s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  text-align: center;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  white-space: normal;
+  height: auto;
+}
+
+.chit:hover {
+  background-color: #90caf9;
+}
+
+.revealed {
+  background-color: white !important;
+  color: #333;
+  font-size: 1em;
+  font-weight: normal;
+  line-height: 1.4;
+  padding: 10px;
+  white-space: normal;
+}
+
+a {
+  display: inline-block;
+  margin-top: 30px;
+  color: #1565c0;
+  text-decoration: none;
+}
+
   </style>
 </head>
 <body>
