Updated lazy.html with new content

--- a/lonely.html
+++ b/lonely.html
@@ -78,21 +78,21 @@ a {
 
   <script>
     const messages = [
-      "You are never truly alone. We r all thinking of you.",
-      "Distance can’t erase connection.",
-      "Your presence is a gift, even if others don’t always show it.",
-      "The world is better with you in it.",
-      "One kind soul is all it takes to feel seen.",
-      "You matter. Deeply.",
-      "Someone out there cares for you more than you know.",
-      "Reach out. You might be surprised who answers.",
-      "You are worthy of love and connection.",
-      "Loneliness is just a chapter, not the whole story.",
-      "Be your own best friend today.",
-      "Someone is missing your smile right now.So do smile idiott",
-      "The night is darkest before the dawn.",
-      "You are surrounded by unseen support.",
-      "Let yourself be loved. Even by you."
+      "You are never truly alone. We r all thinking of you.💭💖",
+      "🌍 Distance can’t erase connection.",
+      "Your presence is a gift, even if others don’t always show it.🎀✨",
+      "The world is better with you in it.No doubt about it 💫",
+      "One kind soul is all it takes to feel seen.You might just be that soul today 💡❤️",
+      "You matter. Deeply.💙",
+      "Someone out there cares for you more than you know 🕊️🤗.",
+      "Reach out. You might be surprised who answers 👀.",
+      "You are worthy of love and connection.Always 💞",
+      "Loneliness is just a chapter, not the whole story 📚🕰️",
+      "Be your own best friend today.Hype yourself up! 💅",
+      "Someone is missing your smile right now.So do smile idiott 😄",
+      "The night is darkest before the dawn. Hold on 🌅🖤",
+      "You are surrounded by unseen support.Feel the vibes ✨ 🫂",
+      "Let yourself be loved.💕🌿 Even by you."
     ];
 
     const container = document.getElementById("chitsContainer");
