--- a/anxious.html
+++ b/anxious.html
@@ -5,27 +5,66 @@
   <title>😟 Anxious - Jar of Emotions</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #e8f5e9;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 { font-size: 2.2em; color: #2e7d32; }
-    .chits-container {
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 40px;
-    }
-    .chit {
-      width: 100px; height: 100px; background-color: #a5d6a7; border-radius: 12px;
-      display: flex; align-items: center; justify-content: center; font-weight: bold;
-      font-size: 1.5em; cursor: pointer; transition: 0.3s; box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .chit:hover { background-color: #81c784; }
-    .revealed {
-      background-color: white !important; color: #333; font-size: 1em; padding: 10px;
-      white-space: normal;
-    }
-    a { display: inline-block; margin-top: 30px; color: #2e7d32; text-decoration: none; }
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #e8f5e9;
+  text-align: center;
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 2.2em;
+  color: #2e7d32;
+}
+
+.chits-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 40px;
+}
+
+.chit {
+  width: 120px;
+  min-height: 100px;
+  background-color: #a5d6a7;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1em;
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  text-align: center;
+  word-wrap: break-word;
+  white-space: normal;
+  box-sizing: border-box;
+  flex-direction: column;
+}
+
+.chit:hover {
+  background-color: #81c784;
+}
+
+.revealed {
+  background-color: white !important;
+  color: #333;
+  font-size: 1em;
+  padding: 10px;
+  white-space: normal;
+}
+
+a {
+  display: inline-block;
+  margin-top: 30px;
+  color: #2e7d32;
+  text-decoration: none;
+}
+
   </style>
 </head>
 <body>
@@ -35,21 +74,21 @@
   <a href="index.html">← Back to Emotions</a>
   <script>
     const messages = [
-      "Take a deep breath. You're safe right now.",
+      " Let go of what you can’t control. Seriously, it's not your job to carry it all. 🌾",
       "This feeling will pass. You’ve faced hard moments before.",
-      "Let go of what you can’t control.",
-      "Anxiety is not who you are.",
-      "Breathe in calm, breathe out tension.",
-      "Your thoughts aren't facts.",
-      "It’s okay to pause.",
-      "You are doing better than you think.",
+      "Take a deep breath. You're can do thiss. 🤍",
+      "Anxiety is not who you are.Just something passing through.",
+      "Breathe in calm, breathe out tension. Just remember ur well-spent days.",
+      "Your thoughts aren't facts.Don’t believe everything you think stupidd 😒",
+      "It’s okay to pause. The world can wait.⏸️",
+      "You are doing better than you think.Way better, actually.",
       "Don’t let fear write your story.",
-      "You are capable of managing this.",
-      "Give yourself time to reset.",
-      "Trust yourself—you’ve got this.",
-      "You're allowed to feel overwhelmed.",
-      "Focus on what you can control.",
-      "One moment at a time is enough."
+      "You are capable of managing this. You’ve got more tools than you know. 🧰",
+      "Give yourself time to reset.You’re not a machine. ⏳💤",
+      "Trust yourself—you’ve got this. You really do. 🤝",
+      "You're allowed to feel overwhelmed.That doesn’t mean you’re failing. 🫂",
+      "Focus on what you can control. Let the rest go..issokayy",
+      "One moment at a time is enough. Stay here, not out there. ⏱️"
     ];
     const container = document.getElementById("chitsContainer");
     messages.forEach((msg, i) => {
