Updated happy.html with new content

--- a/angry.html
+++ b/angry.html
@@ -35,20 +35,20 @@
   <a href="index.html">← Back to Emotions</a>
   <script>
     const messages = [
-      "Breathe. Speak only when you're calm.",
-      "Your feelings are valid. Let them out in healthy ways.",
-      "Pause. Not everything deserves your reaction.",
-      "Anger is a messenger—listen closely.",
-      "Let the fire warm, not burn.",
-      "Your peace is worth protecting.",
-      "Channel it into something meaningful.",
+      "Breathe, Sirr. Speak only when you're calm... 😤➡️😌",
+      "Your feelings are valid—but try not to throw furniture, okay? 🙃❌",
+      "Pause. Not everything deserves your reaction. Some things deserve a dramatic eyebrow raise at most. 😒👁️",
+      "Anger = Messenger. Don’t shoot it. Just ask it what it wants. Politely.",
+      "📞 Before you react, call your calm friend. Or me. I’m calm-ish srry more lyk talk-ish 😂.",
+      " Stay solid. They can’t handle your peace, and that’s their problem.🕶️ ",
+      "Be mysterious. Nothing confuses people more than calm silence after chaos.",
       "Write, walk, breathe—release it safely.",
-      "You're in control, even when emotions rise.",
+      "You’re in control. Not your emotions. You. Yes, you with the twitchy eye. 👀",
       "Name it, don't numb it.",
       "You’re allowed to feel this.",
-      "Forgiveness is freedom—for you.",
+      "Forgiveness = Freedom. Not for them—for you...Trust me it workss 😌",
       "Be fierce, but not destructive.",
-      "It's okay to walk away.",
+      "It’s okay to walk away. Drama exits are powerful. Bonus points if you wear sunglasses.😤",
       "The storm will pass. So will this."
     ];
     const container = document.getElementById("chitsContainer");
