Updated happy.html with new content

--- a/angry.html
+++ b/angry.html
@@ -42,14 +42,14 @@
       "📞 Before you react, call your calm friend. Or me. I’m calm-ish srry more lyk talk-ish 😂.",
       " Stay solid. They can’t handle your peace, and that’s their problem.🕶️ ",
       "Be mysterious. Nothing confuses people more than calm silence after chaos.",
-      "Write, walk, breathe—release it safely.",
+      "Don't argue with clowns. You’ll end up performing in the same circus.",
       "You’re in control. Not your emotions. You. Yes, you with the twitchy eye. 👀",
-      "Name it, don't numb it.",
-      "You’re allowed to feel this.",
+      "🧠 Use your words. Or better yet—use silence. That hits harder.",
+      " You’re allowed to feel it. Just don’t let it turn into a TED Talk on rage.😤",
       "Forgiveness = Freedom. Not for them—for you...Trust me it workss 😌",
-      "Be fierce, but not destructive.",
+      "🪑 Sit down. Not everything needs your full WWE energy.",
       "It’s okay to walk away. Drama exits are powerful. Bonus points if you wear sunglasses.😤",
-      "The storm will pass. So will this."
+      "📺 This ain’t reality TV, okayy. You don’t need to react to every scene."
     ];
     const container = document.getElementById("chitsContainer");
     messages.forEach((msg, i) => {
