--- a/angry.html
+++ b/angry.html
@@ -5,27 +5,66 @@
   <title>😡 Angry - Jar of Emotions</title>
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #ffebee;
-      text-align: center;
-      margin: 0;
-      padding: 20px;
-    }
-    h1 { font-size: 2.2em; color: #c62828; }
-    .chits-container {
-      display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-top: 40px;
-    }
-    .chit {
-      width: 100px; height: 100px; background-color: #ef9a9a; border-radius: 12px;
-      display: flex; align-items: center; justify-content: center; font-weight: bold;
-      font-size: 1.5em; cursor: pointer; transition: 0.3s; box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-    }
-    .chit:hover { background-color: #e57373; }
-    .revealed {
-      background-color: white !important; color: #333; font-size: 1em; padding: 10px;
-      white-space: normal;
-    }
-    a { display: inline-block; margin-top: 30px; color: #c62828; text-decoration: none; }
+  font-family: 'Segoe UI', sans-serif;
+  background-color: #ffebee;
+  text-align: center;
+  margin: 0;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 2.2em;
+  color: #c62828;
+}
+
+.chits-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 40px;
+}
+
+.chit {
+  width: 180px; /* Wider box */
+  height: 180px; /* Taller box */
+  background-color: #ef9a9a;
+  border-radius: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 1.1em; /* Slightly smaller font to fit more text */
+  cursor: pointer;
+  transition: 0.3s;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  text-align: center;
+  line-height: 1.3;
+  white-space: normal;
+  overflow-wrap: break-word;
+}
+
+.chit:hover {
+  background-color: #e57373;
+}
+
+.revealed {
+  background-color: white !important;
+  color: #333;
+  font-size: 0.95em;
+  padding: 10px;
+  white-space: normal;
+  line-height: 1.4;
+}
+
+a {
+  display: inline-block;
+  margin-top: 30px;
+  color: #c62828;
+  text-decoration: none;
+}
+
   </style>
 </head>
 <body>
